network-test/alb-test-02-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: "alb-test-02"
  namespace: "alb-test-02"
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/load-balancer-name: alb-ingress-test-02
    alb.ingress.kubernetes.io/scheme: internet-facing
#    alb.ingress.kubernetes.io/target-type: ip
spec:
  rules:
    - http:
        paths:
          - path: /*
            backend:
              serviceName: "alb-test-02"
              servicePort: 8080
